--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,14 @@ name: Django CI/CD Pipeline
 on:
   push:
     branches:
-      - develop_35.2
+      - develop_35.2  # или develop_34.2 — замени, если нужно
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    env:
+      SECRET_KEY: django-insecure-ci-key
+      DEBUG: 'True'
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -23,39 +25,21 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Create .env for CI
-        run: |
-          cat > .env << EOF
-          DEBUG=True
-          SECRET_KEY=django-insecure-ci-key
-          ALLOWED_HOSTS=localhost,127.0.0.1
-
-          DB_ENGINE=django.db.backends.sqlite3
-          DB_NAME=db.sqlite3
-
-          CELERY_BROKER_URL=redis://localhost:6379/0
-          REDIS_HOST=localhost
-          REDIS_PORT=6379
-          EOF
-
-      - name: Run migrations
-        run: python manage.py migrate
-
       - name: Run tests
         run: python manage.py test
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop_35.2'  # Деплой только с main
+    if: github.ref == 'refs/heads/develop_35.2'  # или develop_34.2
 
     steps:
-      - name: Set up SSH agent
+      - name: Set up SSH
         uses: webfactory/ssh-agent@v0.8.1
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
-      - name: Deploy to server via SSH
+      - name: Deploy to server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
             cd ${{ secrets.DEPLOY_DIR }}
